@@ -16,9 +16,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.FireworkEffectMeta;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class Editor {
 
@@ -30,8 +28,17 @@ public class Editor {
     @SuppressWarnings("DanglingJavadoc")
     public static void open(Player p) {
         Button.Builder inOutline = new Button.Builder().icon(() -> new ItemBuilder(Material.GRAY_STAINED_GLASS_PANE).name("&7Set to").toItem());
-        new SimpleMenu.SBuilder(5)
-                .title(ChatColor.DARK_GRAY + "LootCrates")
+        ItemStack left = new ItemBuilder(Material.IRON_SWORD).name("my custom thing").toItem();
+        ItemStack right = new ItemBuilder(Material.IRON_SWORD).name("&8'&': colors").lore("&8'\\n': newline").toItem();
+
+        final String LORE_LMB_EDIT = "&7LMB: &aEdit";
+        final String LORE_RMB_DEL = "&8RMB: &cdelete";
+
+        final String LORE_LMB_NUM = "&7LMB&r&7: &c-";
+        final String LORE_RMB_NUM = "&7RMB&r&7: &a+";
+
+        new SimpleMenu.SBuilder(3)
+                .title("&8editor")
                 .background()
                 /*********************\
                  *                   *
@@ -39,7 +46,7 @@ public class Editor {
                  *                   *
                  \*******************/
                 .childButton(1, 1, () -> new ItemBuilder(Material.CHEST).name("&3&lCrates").toItem(), new ParallaxMenu.PBuilder()
-                        .title(ChatColor.DARK_GRAY + "Crates")
+                        .title("&8editor\\crates")
                         .parentButton(4, 5)
                         .action(self -> {
                             ArrayList<Button> result = new ArrayList<>();
@@ -48,14 +55,14 @@ public class Editor {
                                 result.add(new Button.Builder()
                                         .icon(() -> new ItemBuilder(crate.itemStack).lore("&8id: " + crate.id).toItem())
                                         .child(self, new SimpleMenu.SBuilder(5)
-                                                .title("Crate: " + crate.id)
+                                                .title("&8editor\\crates\\" + crate.id)
                                                 .background()
                                                 .parentButton(4, 4)
                                                 // *   *   *
                                                 // Edit Crate ItemStack
                                                 // *   *   *
-                                                .childButton(1, 1, () -> new ItemBuilder(crate.itemStack.getType()).name("&b&lEdit Item").resetLore().toItem(), new SimpleMenu.SBuilder(5)
-                                                        .title("edit item")
+                                                .childButton(1, 1, () -> new ItemBuilder(crate.itemStack.getType()).name("&8ItemStack").lore(LORE_LMB_EDIT).toItem(), new SimpleMenu.SBuilder(5)
+                                                        .title("&8editor\\crates\\" + crate.id + "\\item")
                                                         .background()
                                                         .parentButton(4, 4)
                                                         .button(2, 1, inOutline)
@@ -71,10 +78,10 @@ public class Editor {
                                                                     return EnumResult.GRAB_ITEM;
                                                                 }))
                                                         // Edit Name
-                                                        .childButton(6, 1, () -> new ItemBuilder(Material.NAME_TAG).name("&eName").lore("&8LMB: &aEdit").toItem(), new TextMenu.TBuilder()
-                                                                .title("&8Edit name")
-                                                                .leftInput(new Button.Builder().icon(() -> crate.itemStack))
-                                                                .rightInput(new Button.Builder().icon(() -> new ItemBuilder(crate.itemStack.getType()).name("&8Use '&' for colors").lore("&7Ignore the &cX &7>").toItem()))
+                                                        .childButton(6, 1, () -> new ItemBuilder(Material.NAME_TAG).name("&eName").lore(LORE_LMB_EDIT).toItem(), new TextMenu.TBuilder()
+                                                                .title("&8editor\\crates\\" + crate.id + "\\item\\name")
+                                                                .leftInput(new Button.Builder().icon(() -> left))
+                                                                .rightInput(new Button.Builder().icon(() -> right))
                                                                 .onClose(player -> EnumResult.BACK)
                                                                 .onComplete((player, s) -> {
                                                                     if (s.isEmpty())
@@ -83,10 +90,10 @@ public class Editor {
                                                                     return EnumResult.BACK;
                                                                 }))
                                                         // Edit Lore
-                                                        .childButton(6, 3, () -> new ItemBuilder(Material.MAP).name("&7Lore").lore("&8LMB: &aEdit").toItem(), new TextMenu.TBuilder()
-                                                                .title("&8Item lore")
-                                                                .leftInput(new Button.Builder().icon(() -> crate.itemStack))
-                                                                .rightInput(new Button.Builder().icon(() -> new ItemBuilder(crate.itemStack.getType()).name("&8Use '&' for colors").lore("&7Ignore the &cX &7>").toItem()))
+                                                        .childButton(6, 3, () -> new ItemBuilder(Material.MAP).name("&7Lore").lore(LORE_LMB_EDIT).toItem(), new TextMenu.TBuilder()
+                                                                .title("&8editor\\crates\\" + crate.id + "\\item\\lore")
+                                                                .leftInput(new Button.Builder().icon(() -> left))
+                                                                .rightInput(new Button.Builder().icon(() -> right))
                                                                 .onClose(player -> EnumResult.BACK)
                                                                 .onComplete((player, s) -> {
                                                                     if (s.isEmpty())
@@ -98,9 +105,10 @@ public class Editor {
                                                 // *   *   *
                                                 // Edit Inventory Title
                                                 // *   *   *
-                                                .childButton(3, 1, () -> new ItemBuilder(Material.PAPER).name("&e&lTitle").lore("&8Current: " + crate.title + "\n&8LMB: &aEdit").toItem(), new TextMenu.TBuilder()
-                                                        .title("edit title")
-                                                        .text(Util.toAlternateColorCodes('&', crate.title))
+                                                .childButton(3, 1, () -> new ItemBuilder(Material.PAPER).name("&eTitle").lore("&8Current: " + crate.title + "\n" + LORE_LMB_EDIT).toItem(), new TextMenu.TBuilder()
+                                                        .title("&8editor\\crates\\" + crate.id + "\\title")
+                                                        .leftInput(new Button.Builder().icon(() -> left))
+                                                        .rightInput(new Button.Builder().icon(() -> right))
                                                         .onComplete((player, s) -> {
                                                             // set name if it is not empty
                                                             if (!s.isEmpty()) {
@@ -115,21 +123,22 @@ public class Editor {
                                                 // *   *   *
                                                 // Edit LootSets
                                                 // *   *   *
-                                                .childButton(5, 1, () -> new ItemBuilder(Material.ANVIL).name("&a&lEdit Loot").toItem(), new ParallaxMenu.PBuilder()
-                                                        .title("Edit weights")
+                                                .childButton(5, 1, () -> new ItemBuilder(Material.EXPERIENCE_BOTTLE).name("&6Loot").lore(LORE_LMB_EDIT).toItem(), new ParallaxMenu.PBuilder()
+                                                        .title("&8editor\\crates\\" + crate.id + "\\lootSets")
                                                         .parentButton(4, 5)
                                                         .action(builder -> {
                                                             ArrayList<Button> result1 = new ArrayList<>();
 
-                                                            for (var lootSet : Main.get().data.lootSets.values()) {
+                                                            for (LootSet lootSet : Main.get().data.lootSets.values()) {
                                                                 Integer weight = crate.lootByWeight.get(lootSet);
                                                                 Button.Builder btn = new Button.Builder();
                                                                 ItemBuilder b = new ItemBuilder(lootSet.itemStack.getType()).name("&8" + lootSet.id);
                                                                 if (weight != null) {
-                                                                    b.lore("&7" + crate.getFormattedFraction(lootSet) +
-                                                                            "\n&7" + crate.getFormattedPercent(lootSet) +
-                                                                            "\n&fLMB: &c-\n&fRMB: &2+" +
-                                                                            "\n&fMMB: &7toggle\n" +
+                                                                    b.lore("&7" + crate.getFormattedFraction(lootSet) + "\n" +
+                                                                            "&7" + crate.getFormattedPercent(lootSet) + "\n" +
+                                                                            LORE_LMB_NUM + "\n" +
+                                                                            LORE_RMB_NUM + "\n" +
+                                                                            "&fMMB: &7toggle" + "\n" +
                                                                             "&fShift: &7x5").glow(true);
                                                                     btn.mmb(interact -> {
                                                                         // toggle inclusion
@@ -171,7 +180,7 @@ public class Editor {
                                                 // Edit Columns
                                                 // *   *   *
                                                 .button(7, 1, new Button.Builder()
-                                                        .icon(() -> new ItemBuilder(Material.LADDER).name("&8&nColumns").lore("&7LMB: &c-\n&7RMB: &2+").toItem())
+                                                        .icon(() -> new ItemBuilder(Material.LADDER).name("&8Columns").lore(LORE_LMB_NUM + "\n" + LORE_RMB_NUM).count(crate.columns).toItem())
                                                         .lmb(interact -> {
                                                             // decrease
                                                             crate.columns = Util.clamp(crate.columns - 1, 1, 6);
@@ -186,7 +195,7 @@ public class Editor {
                                                 // Edit Picks
                                                 // *   *   *
                                                 .button(2, 2, new Button.Builder()
-                                                        .icon(() -> new ItemBuilder(Material.BEETROOT_SEEDS).name("&8&nPicks").lore("&7LMB: &c-\n&7RMB: &2+").toItem())
+                                                        .icon(() -> new ItemBuilder(Material.MELON_SEEDS).name("&8Picks").lore(LORE_LMB_NUM + "\n" + LORE_RMB_NUM).count(crate.picks).toItem())
                                                         .lmb(interact -> {
                                                             // decrease
                                                             crate.picks = Util.clamp(crate.picks - 1, 1, crate.columns*9);
@@ -202,7 +211,9 @@ public class Editor {
                                                 // *   *   *
                                                 .childButton(4, 2, () -> new ItemBuilder(Material.JUKEBOX).name("&2Sound").lore("&8" + crate.sound).toItem(),
                                                         new TextMenu.TBuilder()
-                                                                .title("Edit sound")
+                                                                .title("&8editor\\crates\\" + crate.id + "\\sound")
+                                                                .leftInput(new Button.Builder().icon(() -> left))
+                                                                .rightInput(new Button.Builder().icon(() -> right))
                                                                 .onComplete((player, s) -> {
                                                                     try {
                                                                         crate.sound = Sound.valueOf(s.toUpperCase());
@@ -223,27 +234,26 @@ public class Editor {
                 /*
                  * View LootSets
                  */
-                ).childButton(3, 1, () -> new ItemBuilder(Material.EXPERIENCE_BOTTLE).name("&6&lLoot").toItem(), new ParallaxMenu.PBuilder()
-                        .title(ChatColor.GOLD + "Loot")
+                ).childButton(3, 1, () -> new ItemBuilder(Material.EXPERIENCE_BOTTLE).name("&6Loot").toItem(), new ParallaxMenu.PBuilder()
+                        .title("&8editor\\lootSets")
                         .parentButton(4, 5)
                         .action(self -> {
                             ArrayList<Button> result = new ArrayList<>();
-                            for (var lootSet : Main.get().data.lootSets.values()) {
+                            for (LootSet lootSet : Main.get().data.lootSets.values()) {
                                 /*
                                  * List all LootSets
                                  */
                                 result.add(new Button.Builder()
-                                        .icon(() -> new ItemBuilder(lootSet.itemStack).lore("&8id: " + lootSet.id + "\n&8" + lootSet.loot.size() + " elements\n&8LMB: &2edit\n&8RMB: &cdelete").toItem())
+                                        .icon(() -> new ItemBuilder(lootSet.itemStack).lore("&8id: " + lootSet.id + "\n" + "&8" + lootSet.loot.size() + " elements" + "\n" + LORE_LMB_EDIT + "\n" + LORE_RMB_DEL).toItem())
                                         .child(self, new ParallaxMenu.PBuilder()
-                                                .title("lootSet.id: " + lootSet.id)
+                                                .title("&8editor\\lootSets\\" + lootSet.id)
                                                 .parentButton(4, 5)
                                                 .action(self1 -> {
                                                     ArrayList<Button> result1 = new ArrayList<>();
                                                     for (AbstractLoot a : lootSet.loot) {
                                                         ItemStack copy = a.getIcon();
-                                                        Main.get().debug("a: " + a);
                                                         result1.add(new Button.Builder()
-                                                                .icon(() -> new ItemBuilder(copy).lore(a + "\n&8LMB: &2edit\n&8RMB: &cdelete").toItem())
+                                                                .icon(() -> new ItemBuilder(copy).lore(a + "\n" + LORE_LMB_EDIT + "\n" + LORE_RMB_DEL).toItem())
                                                                 .child(self1, a.getMenuBuilder(), interact -> {
                                                                     if (lootSet.loot.size() > 1) {
                                                                         // delete
@@ -257,7 +267,7 @@ public class Editor {
                                                     return result1;
                                                 })
                                                 .childButton(2, 5, () -> new ItemBuilder(lootSet.itemStack.getType()).name("Edit...").toItem(), new SimpleMenu.SBuilder(5)
-                                                        .title("Edit " + lootSet.id + " item")
+                                                        .title("&8editor\\lootSets\\" + lootSet.id + "\\item")
                                                         .background()
                                                         .parentButton(4, 4)
                                                         .button(2, 1, inOutline)
@@ -273,11 +283,11 @@ public class Editor {
                                                                     return EnumResult.GRAB_ITEM;
                                                                 }))
                                                         // Edit Name
-                                                        .childButton(6, 1, () -> new ItemBuilder(Material.NAME_TAG).name("&eName").lore("&8LMB: &aEdit").toItem(), new TextMenu.TBuilder()
-                                                                .title("&8Edit name")
+                                                        .childButton(6, 1, () -> new ItemBuilder(Material.NAME_TAG).name("&eName").lore(LORE_LMB_EDIT).toItem(), new TextMenu.TBuilder()
+                                                                .title("&8editor\\lootSets\\" + lootSet.id + "\\item\\name")
                                                                 //.text(Util.toAlternateColorCodes('&', lootItem.itemStack.getItemMeta().getDisplayName()))
-                                                                .leftInput(new Button.Builder().icon(() -> new ItemBuilder(Material.IRON_SWORD).mergeLexicals(lootSet.itemStack).toItem()))
-                                                                .rightInput(new Button.Builder().icon(() -> new ItemBuilder(Material.IRON_SWORD).name("&8Use '&' for colors").toItem()))
+                                                                .leftInput(new Button.Builder().icon(() -> left))
+                                                                .rightInput(new Button.Builder().icon(() -> right))
                                                                 .onClose(player -> EnumResult.BACK)
                                                                 .onComplete((player, s) -> {
                                                                     if (s.isEmpty())
@@ -286,12 +296,10 @@ public class Editor {
                                                                     return EnumResult.BACK;
                                                                 }))
                                                         // Edit Lore
-                                                        .childButton(6, 3, () -> new ItemBuilder(Material.MAP).name("&7Lore").lore("&8LMB: &aEdit").toItem(), new TextMenu.TBuilder()
-                                                                .title("&8Item lore")
-                                                                .leftInput(new Button.Builder().icon(() -> new ItemBuilder(Material.IRON_SWORD).mergeLexicals(lootSet.itemStack).toItem()))
-                                                                .rightInput(new Button.Builder().icon(() -> new ItemBuilder(Material.IRON_SWORD).name("&8Use '&7&&8' for colors").lore("&8Use '&7\\n&8' for multiline").toItem()))
-                                                                //.leftInput(new Button.Builder().icon(() -> itemStack))
-                                                                //.rightInput(new Button.Builder().icon(() -> new ItemBuilder(itemStack.getType()).name("&8Use '&' for colors").lore("&7Ignore the &cX &7>").toItem()))
+                                                        .childButton(6, 3, () -> new ItemBuilder(Material.MAP).name("&7Lore").lore(LORE_LMB_EDIT).toItem(), new TextMenu.TBuilder()
+                                                                .title("&8editor\\lootSets\\" + lootSet.id + "\\item\\lore")
+                                                                .leftInput(new Button.Builder().icon(() -> left))
+                                                                .rightInput(new Button.Builder().icon(() -> right))
                                                                 .onClose(player -> EnumResult.BACK)
                                                                 .onComplete((player, s) -> {
                                                                     if (s.isEmpty())
@@ -301,13 +309,13 @@ public class Editor {
                                                                 }))
                                                         // Edit CustomModelData
                                                         .childButton(6, 2, () -> new ItemBuilder(Material.PLAYER_HEAD).skull("eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvMzQ2NDg3NGRmNDUyYzFkNzE3ZWRkZDBmYjNiODQ4MjAyYWQxNTU3MTI0NWFmNmZhZGUyZWNmNTE0ZjNjODBiYiJ9fX0=").name("&7CustomModelData").lore("&8LMB: &aEdit").toItem(), new TextMenu.TBuilder()
-                                                                .title("&8CustomModelData")
+                                                                .title("&8editor\\lootSets\\" + lootSet.id + "\\item\\model")
                                                                 .leftInput(new Button.Builder().icon(() -> {
                                                                     ItemMeta meta = lootSet.itemStack.getItemMeta();
                                                                     ItemBuilder builder = new ItemBuilder(Material.IRON_SWORD);
                                                                     if (meta != null && meta.hasCustomModelData())
-                                                                        builder.name("CustomModelData: " + meta.getCustomModelData());
-                                                                    else builder.name("CustomModelData: none");
+                                                                        builder.lore("&8CustomModelData: &7" + meta.getCustomModelData());
+                                                                    else builder.lore("&8CustomModelData: &7none");
                                                                     return builder.toItem();
                                                                 }))
                                                                 .rightInput(new Button.Builder().icon(() -> new ItemBuilder(Material.IRON_SWORD).name("&8Input an integer").toItem()))
@@ -334,12 +342,12 @@ public class Editor {
 
 
                                                 .childButton(6, 5, () -> new ItemBuilder(Material.NETHER_STAR).name("&2New...").toItem(), new ParallaxMenu.PBuilder()
-                                                        .title("New AbstractLoot")
+                                                        .title("&8editor\\lootSets\\" + lootSet.id + "\\new")
                                                         //.onClose(player -> EnumResult.BACK)
                                                         .parentButton(4, 5)
                                                         .action(self1 -> {
                                                             ArrayList<Button> result1 = new ArrayList<>();
-                                                            for (var menuClazz : LootCratesAPI.lootClasses) {
+                                                            for (Class<? extends AbstractLoot> menuClazz : LootCratesAPI.lootClasses) {
                                                                 //AbstractLoot aLootInstance = new a
                                                                 result1.add(new Button.Builder()
                                                                         .icon(() -> new ItemBuilder(Material.GOLD_INGOT).name(menuClazz.getSimpleName()).toItem())
@@ -373,14 +381,18 @@ public class Editor {
                             return result;
                         })
                         .childButton(6, 5, () -> new ItemBuilder(Material.NETHER_STAR).name("&2New...").toItem(), new TextMenu.TBuilder()
-                                .title("New LootSet")
+                                .title("&8editor\\lootSets\\new")
+                                .leftInput(new Button.Builder().icon(() -> left))
                                 .onClose(player -> EnumResult.BACK)
                                 .onComplete((player, text) -> {
                                     if (!text.isEmpty() && !Main.get().data.lootSets.containsKey(text)) {
-                                        // add that lootgroup
+                                        // Java 16
+                                        //Main.get().data.lootSets.put(text,
+                                        //        new LootSet(text, new ItemStack(Material.RED_STAINED_GLASS),
+                                        //                new ArrayList<>(List.of(new LootItem()))));
                                         Main.get().data.lootSets.put(text,
                                                 new LootSet(text, new ItemStack(Material.RED_STAINED_GLASS),
-                                                        new ArrayList<>(List.of(new LootItem()))));
+                                                        new ArrayList<>(Collections.singletonList(new LootItem()))));
 
                                     }
                                     return EnumResult.BACK;
@@ -404,11 +416,15 @@ public class Editor {
                                 .icon(() -> new ItemBuilder(Material.FIREWORK_STAR).fireworkEffect(Main.get().data.fireworkEffect).toItem())
                                 .lmb(interact -> {
                                     if (interact.heldItem != null) {
-                                        if (interact.heldItem.getItemMeta() instanceof FireworkEffectMeta meta && meta.hasEffect()) {
-                                            Main.get().data.fireworkEffect = meta.getEffect();
-                                            return EnumResult.REFRESH;
+                                        //if (interact.heldItem.getItemMeta() instanceof FireworkEffectMeta meta && meta.hasEffect()) {
+                                        if (interact.heldItem.getItemMeta() instanceof FireworkEffectMeta) {
+                                            FireworkEffectMeta meta = (FireworkEffectMeta) interact.heldItem.getItemMeta();
+                                            if (meta.hasEffect()) {
+                                                Main.get().data.fireworkEffect = meta.getEffect();
+                                                return EnumResult.REFRESH;
+                                            }
                                         }
-                                        else interact.player.sendMessage(ChatColor.YELLOW + "must have effect");
+                                        interact.player.sendMessage(ChatColor.YELLOW + "must have effect");
                                     }
 
                                     return EnumResult.GRAB_ITEM;
@@ -418,7 +434,7 @@ public class Editor {
                 /*
                  * Misc settings
                  */
-                .childButton(7, 1, () -> new ItemBuilder(Material.NETHERITE_SCRAP).name("&8&lMisc").toItem(), new SimpleMenu.SBuilder(5)
+                .childButton(7, 1, () -> new ItemBuilder(Material.IRON_HORSE_ARMOR).name("&8&lMisc").toItem(), new SimpleMenu.SBuilder(5)
                         .title("&8Misc")
                         .button(1, 1, new Button.Builder()
                                 .icon(() -> new ItemBuilder(Material.COMMAND_BLOCK).name("&e&lToggle Debug").lore(Main.get().data.debug ? "&2enabled" : "&cdisabled").toItem())
